<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/home_bkg_col"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
tools:context=".activities.ManageQuiz.ManageQuizActivity"
android:paddingTop="@dimen/activity_vertical_margin">

<TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:textSize="@dimen/h1_txt_size"
    android:textColor="@color/white"
    android:gravity="center"
    android:text="@string/manage_act_title" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_download"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:background="#fff"
        android:gravity="center"
        android:onClick="downloadQuiz"
        android:text="@string/home_btn_download"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_add_quiz"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:background="#fff"
        android:gravity="center"
        android:onClick="addQuiz"
        android:text="@string/home_btn_add_quiz"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:background="#fff"
        android:gravity="center"
        android:onClick="editQuiz"
        android:text="@string/edit_quiz"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:background="#fff"
        android:gravity="center"
        android:onClick="goBackHome"
        android:text="@string/btn_go_home"
        android:textColor="@color/black" />
</LinearLayout>

</LinearLayout>
