<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ManageQuiz.AddAnswer.AddAnswerActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/home_bkg_col"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="@dimen/h1_txt_size"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/add_answer_title" />

        <EditText
            android:id="@+id/txt_answer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:gravity="center"
            android:inputType="text"
            android:text=""
            android:hint="@string/add_answer_txt" />

        <TextView
            android:id="@+id/correct_answer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/h1_txt_size"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/add_correct_answer" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/view_below" >

            <RadioButton
                android:id="@+id/rbtn_not_correct_answer"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingRight="10dp"
                android:text="@string/rbtn_not_correct_answer" />

            <RadioButton
                android:id="@+id/rbtn_correct_answer"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"
                android:text="@string/rbtn_correct_answer" />
        </RadioGroup>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:background="#fff"
            android:gravity="center"
            android:text="@string/btn_upload"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_quiz_save"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:enabled="false"
                android:onClick="saveAnswer"
                android:textColor="@color/black"
                android:text="@string/btn_save" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:background="#fff"
                android:gravity="center"
                android:onClick="goBackToQuestion"
                android:textColor="@color/black"
                android:text="@string/btn_answer_back"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>