<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home_bkg_col"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="@dimen/h1_txt_size"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/add_quiz_title" />

    <EditText
        android:id="@+id/txt_quiz_type_real"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/add_quiz_type" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:background="#fff"
        android:onClick="uploadImage"
        android:gravity="center"
        android:text="@string/btn_upload"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_quiz_save"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:onClick="saveQuiz"
            android:enabled="false"
            android:textColor="@color/black"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:background="#fff"
            android:gravity="center"
            android:onClick="goBackHome"
            android:textColor="@color/black"
            android:text="@string/btn_go_manage" />
    </LinearLayout>

</LinearLayout>