<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home_bkg_col"
    android:padding="5dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_box_title"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dialog_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/dialog_box_txt"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_btnValid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/dialog_btn_valid"
            android:layout_margin="@dimen/btn_mg"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/dialog_btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_mg"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/dialog_btn_cancel"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>