<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Play.Result.ResultActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/home_bkg_col"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/result_title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="@dimen/h1_txt_size"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/result_h1" />

        <TextView
            android:id="@+id/result_highest_score"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:background="#fff"
            android:gravity="center"
            android:text="@string/result_highest_score" />

        <TextView
            android:id="@+id/result_current_score"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:background="#fff"
            android:gravity="center"
            android:text="@string/result_current_score" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_download"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:background="#fff"
            android:gravity="center"
            android:onClick="goBackToQuizs"
            android:text="@string/result_btn_to_quizs" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:background="#fff"
            android:gravity="center"
            android:text="@string/result_btn_exit"
            android:onClick="exitQuiz" />
    </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>