<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bkg_col"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.Main.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="@dimen/h1_txt_size"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/home_h1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:background="#fff"
            android:gravity="center"
            android:onClick="playQuiz"
            android:text="@string/home_btn_play"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_download"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:background="#fff"
            android:gravity="center"
            android:onClick="manageQuiz"
            android:text="@string/manage_act_title"
            android:textColor="@color/black" />


        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:background="#fff"
            android:gravity="center"
            android:onClick="exitQuiz"
            android:text="@string/home_btn_exit"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>
