<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ManageQuiz.AddQuestion.AddQuestionActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/home_bkg_col"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="@dimen/h1_txt_size"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/add_question_title" />

        <EditText
            android:id="@+id/txt_question"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:gravity="center"
            android:inputType="text"
            android:text=""
            android:hint="@string/add_question_type" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:background="#fff"
            android:gravity="center"
            android:text="@string/btn_upload"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_quiz_save"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:enabled="false"
                android:onClick="saveQuestion"
                android:textColor="@color/black"
                android:text="@string/btn_save" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:background="#fff"
                android:gravity="center"
                android:onClick="goBackToQuiz"
                android:textColor="@color/black"
                android:text="@string/btn_quiz_back" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>